# projvk

./: .gdbbreak  .gdbinit  .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/: clog.h  cvk.h
core/include/base/: base_window.h
core/include/cgltf/: gltf_node.h  gltf_node.inl
core/include/cvk/: acceleration_structure.h  buffer.h  command_buffer.h  command_pool.h  descriptor.h  device.h  fence.h  framebuffer.h  graphics_pipeline.h  graphics_pipeline.inl  image.h  instance.h  memorized_buffer.h  memorized_image.h  memory.h  memory.inl  physical_device.h  pipeline_compute.h  pipeline_graphics.h  pipeline_raytracing.h  render_pass.h  semaphore.h  shader.h  surface.h  surface_win32.h  swapchain.h  vk_header.h  vk_header.inl
core/include/linux/: surface_xcb.h  win_xcb.h  xcb_win.h
core/include/utils/: base_device_obj.h  base_device_obj.inl  base_multi_attach.h  base_multi_attach.inl  base_obj.h  base_obj.inl  base_objs.h  base_objs.inl  base_single_attach.h  base_single_attach.inl  cloned_obj.h  cvk_iterator.h  def_utils.h  device_base_obj.h  device_base_obj.inl  file.h  obj_data.h  obj_data.inl  template_if.h  template_reverse.h  template_sequence.h  template_sort.h  timer.h  tuple.h  tuple.inl  tuple_map.h  tuple_map.inl  tuple_union.h  tuple_union.inl  vector_util.h  vector_util.inl  vertex_data.h  vertex_data.inl
core/include/win32/: surface_win32.h  win.h
core/lib/: core.lib
core/src/base/: base_window.cpp
core/src/cgltf/: gltf_node.cpp
core/src/cvk/: acceleration_structure.cpp  buffer.cpp  command_buffer.cpp  command_pool.cpp  descriptor.cpp  device.cpp  fence.cpp  framebuffer.cpp  graphics_pipeline.cpp  image.cpp  instance.cpp  memorized_buffer.cpp  memorized_image.cpp  memory.cpp  physical_device.cpp  pipeline_compute.cpp  pipeline_graphics.cpp  pipeline_raytracing.cpp  render_pass.cpp  semaphore.cpp  shader.cpp  surface.cpp  surface_win32.cpp  swapchain.cpp  vk_debug.cpp  vk_header.cpp
core/src/linux/: surface_xcb.cpp  surface_xcb_initialize.cpp  xcb_win.cpp
core/src/utils/: base_device_obj.cpp  base_multi_attach.cpp  base_obj.cpp  base_objs.cpp  base_single_attach.cpp  cloned_obj.cpp  cvk_iterator.cpp  def_utils.cpp  device_base_obj.cpp  file.cpp  obj_data.cpp  timer.cpp  tuple.cpp  tuple_map.cpp  vector_util.cpp  vertex_data.cpp
core/src/win32/: surface_win32.cpp  win.cpp
framework/: CMakeLists.txt
framework/include/render/: render_attachment.h  render_element.h  render_element_input.h  render_element_output.h  render_target.h
framework/src/render/: render_target.cpp
lockfree/: CMakeLists.txt
lockfree/include/: clf_basic.h  lockfree.h
lockfree/include/lock_free/: sync_queue.h  sync_stack.h  sync_structure_base.h
lockfree/include/lock_free_ptr/: count_obj.h  list_memory_manager.h  list_memory_manager.inl  lock_free_ptr.h  lock_free_ptr.inl  lock_free_ptr_base.inl  lock_free_ptr_impl.h  lock_free_ptr_impl.inl  lock_free_ptrs.inl  lock_free_weak_ptr_base.h  lock_free_weak_ptr_base.inl  memory_manager.h  memory_manager.inl  memory_manager_base.h  shared_ptr.inl  shared_ptr_impl.h  shared_ptr_impl.inl  shared_ptrs.h  shared_ptrs.inl
lockfree/include/thread_pool/: tasks_state.h  tasks_state_pause_lock.h  thread_executor.h  thread_executor_base.h  thread_executor_lock_free.h  thread_pool.h
lockfree/src/lock_free/: sync_queue.cpp  sync_stack.cpp
lockfree/src/lock_free_ptr/: lock_free_ptrs.cpp  memory_manager.cpp
lockfree/src/thread_pool/: tasks_state.cpp  tasks_state_pause_lock.cpp  thread_executor_base.cpp  thread_executor_lock_free.cpp  thread_pool.cpp  thread_pool.inl
perf/: CMakeLists.txt
perf/include/: base_thread_executor.h  lock_free_thread_executor.h  lock_thread_executor.h  perf.h  perf_basic.h  perf_node.h  perf_nodes.h  sync_queue.h  sync_queue.h.bak  sync_ref.h  sync_ref.inl  sync_stack.h  sync_structure_base.h  sync_tasks_state.h  tasks_state.h  thread_executor.h  thread_executor_base.h  thread_executor_lock_free.h  thread_pool.h
perf/include/lock_free/: sync_queue.h  sync_stack.h  sync_structure_base.h
perf/include/lock_free_ptr/: compatible_atomic.h  count_obj.h  count_obj.inl  list_memory_manager.h  list_memory_manager.inl  lock_free_ptr.h  lock_free_ptr.inl  lock_free_ptr_base.h  lock_free_ptr_base.inl  lock_free_ptr_impl.h  lock_free_ptr_impl.inl  lock_free_ptrs.h  lock_free_weak_ptr_base.h  lock_free_weak_ptr_base.inl  memory_manager.h  memory_manager.inl  shared_ptr.h  shared_ptr.inl  shared_ptr_impl.h  shared_ptr_impl.inl
perf/include/thread_pool/: tasks_state.h  tasks_state_pause_lock.h  thread_executor.h  thread_executor_lock_free.h
perf/src/: base_thread_executor.cpp  lock_free_thread_executor.cpp  lock_thread_executor.cpp  perf.cpp  perf_node.cpp  perf_nodes.cpp  perf_nodes_saver.cpp  sync_queue.cpp.bak  sync_ref.cpp  sync_stack.cpp  sync_state_base.cpp  tasks_state.cpp  tasks_state_pause_lock.cpp  thread_executor.cpp  thread_executor_base.cpp  thread_executor_base.inl  thread_executor_lock_free.cpp  thread_pool.cpp  thread_pool.inl
perf/src/lock_free_ptr/: count_obj.cpp  lock_free_ptr.cpp
perf/src/thread_pool/: tasks_state.cpp  thread_executor.cpp  thread_executor_base.cpp  thread_executor_base.inl  thread_pool.cpp
test/vk-test/: CMakeLists.txt
test/vk-test/examples/: compute_triangle.cpp  draw_object.h  load_model.cpp  load_model.h  load_texture.h  lock_free_test.cpp  multi_thread.cpp  perf_test.cpp  radialblur.cpp  radialblur.cpp.bak  raytracing_triangle.cpp  sdl_window.cpp.bak  subpasses.cpp  subpasses_transparent.cpp  triangle.cpp  triangle_once.cpp  window.cpp  xcb_window.cpp  xcb_window_test.cpp
test/vk-test/framework/: rendertarget.cpp
test/vk-test/shader/: color.frag  composition.frag  composition.vert  composition_transparent.frag  compute_basic.comp  gbuff.frag  gbuff_transparent.frag  radial_composition.frag  radial_multisample.frag  rt_basic.rchit  rt_basic.rgen  texture.frag  texture.vert  triangle.vert
test/vk-test/src/: acceleration_struct.cpp  command.cpp  descriptor.cpp  device.cpp  framebuffer.cpp  gltf_test.cpp  image.cpp  main.cpp  memory.cpp  perf.cpp  (+10 more)
(+177 files in other folders)
